fail_crate/tests/unknown_field_option.rs
use inew::New;

#[derive(New)]
struct A {
    #[new(what)]
    x: u32,
}

fn main() {}
